GUI optimiert - Preferred height angepasst - Tests für Deploy gemacht

--- a/src/main/resources/com/tbt/trainthebrain/main.css
+++ b/src/main/resources/com/tbt/trainthebrain/main.css
@@ -8,6 +8,9 @@
     -fx-text-fill: #bdbdbd;
     -fx-fill: #bdbdbd;
 }
+.text.answerText{
+    -fx-wrap-text: break-word;
+}
 
 .text-error {
     -fx-font-weight: bold;
