--- a/src/main/resources/com/tbt/trainthebrain/main.css
+++ b/src/main/resources/com/tbt/trainthebrain/main.css
@@ -12,6 +12,11 @@
     -fx-wrap-text: break-word;
 }
 
+.text.text-success{
+    -fx-text-fill: #209318;
+    -fx-fill: #209318;
+}
+
 .text.meta{
     -fx-text-fill: rgba(189, 189, 189, 0.5);
     -fx-fill: rgba(189, 189, 189, 0.5);
