--- a/src/main/resources/com/tbt/trainthebrain/learnmode.fxml
+++ b/src/main/resources/com/tbt/trainthebrain/learnmode.fxml
@@ -17,7 +17,7 @@
 <?import com.tbt.trainthebrain.AnswerBox?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="700" prefHeight="850.0" prefWidth="960.0" stylesheets="@main.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tbt.trainthebrain.LearnmodeController">
     <children>
-        <VBox layoutX="116.0" layoutY="-25.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <HBox fx:id="header" alignment="BOTTOM_CENTER" prefHeight="246.0" prefWidth="960.0" VBox.vgrow="NEVER">
                <children>
@@ -48,15 +48,15 @@
                   </HBox>
                </children>
             </AnchorPane>
-            <VBox fx:id="learnModeInfoContainer" alignment="CENTER" prefHeight="571.0" prefWidth="960.0" VBox.vgrow="ALWAYS">
+            <VBox fx:id="learnModeInfoContainer" alignment="CENTER" VBox.vgrow="ALWAYS">
                <children>
-                  <ScrollPane hbarPolicy="NEVER" prefWidth="960.0" VBox.vgrow="ALWAYS">
+                  <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" VBox.vgrow="ALWAYS">
                      <content>
-                        <VBox>
+                        <VBox alignment="CENTER">
                            <children>
                               <HBox alignment="CENTER" prefHeight="0.0" prefWidth="960.0">
                                  <children>
-                                    <Text fx:id="questionText" strokeType="OUTSIDE" strokeWidth="0.0" text="#Fragentext Wie ist die Frage die hier stehen soll?" wrappingWidth="700.0" textAlignment="CENTER">
+                                    <Text fx:id="questionText" strokeType="OUTSIDE" strokeWidth="0.0" text="#Fragentext Wie ist die Frage die hier stehen soll?" textAlignment="CENTER" wrappingWidth="700.0">
                                        <styleClass>
                                           <String fx:value="text" />
                                           <String fx:value="lead" />
@@ -67,7 +67,7 @@
                                     <Insets left="20.0" right="20.0" top="20.0" />
                                  </padding>
                               </HBox>
-                              <HBox prefHeight="370.0" prefWidth="960.0">
+                              <HBox alignment="CENTER" prefHeight="370.0" prefWidth="960.0">
                                  <children>
                                     <AnchorPane prefHeight="415.0" prefWidth="960.0">
                                        <children>
@@ -101,7 +101,7 @@
                                                       <Insets />
                                                    </GridPane.margin>
                                                 </AnswerBox>
-                                                <AnswerBox fx:id="answerBox1" alignment="CENTER_LEFT" onMouseClicked="#clickedOnAnswer" spacing="10.0" styleClass="answerBox" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" GridPane.columnIndex="1">
+                                                <AnswerBox fx:id="answerBox1" alignment="CENTER_LEFT" onMouseClicked="#clickedOnAnswer" spacing="10.0" styleClass="answerBox" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                                                    <children>
                                                       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="2" translateX="10.0">
                                                          <styleClass>
@@ -113,7 +113,7 @@
                                                       <Text fx:id="answer1" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Text" translateX="-40.0" wrappingWidth="330.0" />
                                                    </children>
                                                 </AnswerBox>
-                                                <AnswerBox fx:id="answerBox2" alignment="CENTER_LEFT" onMouseClicked="#clickedOnAnswer" spacing="10.0" styleClass="answerBox" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" GridPane.rowIndex="1">
+                                                <AnswerBox fx:id="answerBox2" alignment="CENTER_LEFT" onMouseClicked="#clickedOnAnswer" spacing="10.0" styleClass="answerBox" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                                                    <children>
                                                       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="3" translateX="10.0">
                                                          <styleClass>
@@ -125,7 +125,7 @@
                                                       <Text fx:id="answer2" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Text" translateX="-40.0" wrappingWidth="330.0" />
                                                    </children>
                                                 </AnswerBox>
-                                                <AnswerBox fx:id="answerBox3" alignment="CENTER_LEFT" onMouseClicked="#clickedOnAnswer" spacing="10.0" styleClass="answerBox" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                                <AnswerBox fx:id="answerBox3" alignment="CENTER_LEFT" onMouseClicked="#clickedOnAnswer" spacing="10.0" styleClass="answerBox" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                                                    <children>
                                                       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="4" translateX="10.0">
                                                          <styleClass>
@@ -150,9 +150,9 @@
                         </VBox>
                      </content>
                   </ScrollPane>
-                  <StackPane alignment="BOTTOM_RIGHT" prefHeight="40.0" prefWidth="960.0" VBox.vgrow="NEVER">
+                  <StackPane alignment="BOTTOM_RIGHT" prefHeight="80.0" prefWidth="960.0" VBox.vgrow="NEVER">
                      <children>
-                        <Button fx:id="checkBtn" mnemonicParsing="false" onAction="#checkAnswersClicked" text="Antwort prüfen">
+                        <Button fx:id="checkBtn" disable="true" mnemonicParsing="false" onAction="#checkAnswersClicked" prefHeight="90.0" prefWidth="180.0" text="Antwort prüfen">
                            <styleClass>
                               <String fx:value="btn" />
                               <String fx:value="btn-primary" />
@@ -162,7 +162,7 @@
                               <Glyph fontFamily="FontAwesome" icon="CHECK" />
                            </graphic>
                         </Button>
-                        <Button fx:id="nextQuestBtn" mnemonicParsing="false" onAction="#switchQuestionClicked" text="Weiter" visible="false">
+                        <Button fx:id="nextQuestBtn" mnemonicParsing="false" onAction="#switchQuestionClicked" prefHeight="90.0" prefWidth="180.0" text="Weiter" visible="false">
                            <styleClass>
                               <String fx:value="btn" />
                               <String fx:value="btn-success" />
@@ -172,7 +172,7 @@
                               <Glyph fontFamily="FontAwesome" icon="CHEVRON_RIGHT" />
                            </graphic>
                         </Button>
-                        <Button fx:id="endcardBtn" mnemonicParsing="false" onAction="#goToEndScreenClicked" text="Abschliessen" visible="false">
+                        <Button fx:id="endcardBtn" mnemonicParsing="false" onAction="#goToEndScreenClicked" prefHeight="90.0" prefWidth="180.0" text="Abschliessen" visible="false">
                            <styleClass>
                               <String fx:value="btn" />
                               <String fx:value="btn-success" />
