--- a/src/main/resources/com/tbt/trainthebrain/main.css
+++ b/src/main/resources/com/tbt/trainthebrain/main.css
@@ -173,6 +173,7 @@
     -fx-border-radius: 4px;
     -fx-background-color: rgba(35, 35, 35, 0.71);
     -fx-border-color: #101010;
+    -fx-border-width: 1px;
     -fx-cursor: hand;
 }
 
@@ -184,6 +185,11 @@
 .answerBox.false {
     -fx-background-color: rgba(122, 21, 21, 0.9);
     -fx-border-color: #981818;
+}
+
+.answerBox.false-selected {
+    -fx-background-color: rgba(122, 21, 21, 0.9);
+    -fx-border-color: #186798;
 }
 
 .answerBox.correct {
